2010-10-01  Adam Roben  <aroben@apple.com>

        Support for testing NPN_GetValue(NPNVnetscapeWindow)

        Test for <http://webkit.org/b/46726> <rdar://problem/8486319>
        Right-clicking on windowless Flash plugin in WebKit2 makes a context
        menu appear in the bottom-right corner of the screen

        Reviewed by Anders Carlsson.

        * platform/win/plugins/get-value-netscape-window-expected.txt: Added.
        * platform/win/plugins/get-value-netscape-window.html: Added.

2010-10-01  Adam Roben  <aroben@apple.com>

        Add expected Windows results for
        scrollbars/custom-scrollbar-with-incomplete-style.html

        This test was added in r66372 without any expected results.

        * platform/win/scrollbars/custom-scrollbar-with-incomplete-style-expected.checksum: Added.
        * platform/win/scrollbars/custom-scrollbar-with-incomplete-style-expected.png: Added.
        * platform/win/scrollbars/custom-scrollbar-with-incomplete-style-expected.txt: Added.

2010-10-01  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [Extensions API] expose page load events timings
        Added webInspector.resources.getPageTimings()
        https://bugs.webkit.org/show_bug.cgi?id=45954

        * inspector/extensions-api-expected.txt:
        * inspector/extensions-resources-expected.txt:
        * inspector/extensions-resources.html:

2010-10-01  Adam Roben  <aroben@apple.com>

        Remove the fixed test from the Skipped file, too

        * platform/win/Skipped:

2010-10-01  Adam Roben  <aroben@apple.com>

        Remove bogus Windows results for clip-path-referencing-use2.svg

        Fixes <http://webkit.org/b/46919> <rdar://problem/8497626> REGRESSION?
        (r65617?): svg/custom/clip-path-referencing-use2.svg fails on Windows

        Rubber-stamped by Nikolas Zimmermann.

        * platform/win/svg/custom/clip-path-referencing-use2-expected.txt: Removed.
