@@ -1,0 +1,2 @@
+<html manifest="foobar.manifest">
+FAIL
