@@ -1,3 +1,15 @@
+2010-10-01  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Anders Carlsson.
+
+        https://bugs.webkit.org/show_bug.cgi?id=44406
+        <rdar://problem/8310921> Application Cache crash when a fallback document has a manifest URL
+
+        Test: http/tests/appcache/foreign-fallback.html
+
+        * loader/appcache/ApplicationCacheGroup.cpp: (WebCore::ApplicationCacheGroup::selectCache):
+        Changed ApplicationCacheResource lookup to find fallback resources correctly.
+
 2010-10-01  Kwang Yul Seo  <skyul@company100.net>
 
         Unreviewed, Brew MP build fix.
